--- a/src/book/01_introduction.tex
+++ b/src/book/01_introduction.tex
@@ -61,7 +61,7 @@ A list of text updates will be listed here.  Currently, as Version 1.0, there ar
 \section{Contact Information}
 It is important that you reach out to someone at the first realization of difficulty.  If you have specific class-related questions, contact your teacher.  Their syllabus will have the best way to contact them (usually, it's email).
 
-If you believe there to be an error in this text, you may reach out to one of the writers with the error.  Reach out to either Mr.  Cole Ellis \href{mailto:educationelite1@gmail.com}{here} or Mr.  Joshua Kuffour \href{mailto:jkuffour1.jk@gmail.com}{here}.
+If you believe there to be an error in this text, you may reach out to one of the writers with the error.  Reach out to either Mr.  Cole Ellis \href{mailto:elliscole00@gmail.com}{here} or Mr.  Joshua Kuffour \href{mailto:jkuffour1.jk@gmail.com}{here}.
 
 \section{How We Wrote this Book}
 This book was written using the \LaTeX{} document processing system.  We would like to thank the various \LaTeX{} packages we've used along the way in making this document as well as the numerous help sites in helping us define our own document class.  The diagrams were prepared using the Tikz package.
